--- a/ktor-frotagestor/src/main/resources/application.yaml
+++ b/ktor-frotagestor/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
 ktor:
-    application:
-        modules:
-            - com.redenorte.ApplicationKt.module
-    deployment:
-        port: 3001
+  development: true
+  deployment:
+    port: 3001
+    watch:
+      - build/classes/kotlin/main
+  application:
+    modules:
+      - com.redenorte.ApplicationKt.module
