Atualizando nome do pacote do app
Signed-off-by: Elielton <elieltonramos14@gmail.com>

--- a/ktor-frotagestor/src/main/resources/application.yaml
+++ b/ktor-frotagestor/src/main/resources/application.yaml
@@ -6,4 +6,4 @@ ktor:
       - build/classes/kotlin/main
   application:
     modules:
-      - com.redenorte.ApplicationKt.module
+      - com.frotagestor.ApplicationKt.module
