--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.23.0",
