--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,9 @@
     "@ng-icons/core": "^32.1.0",
     "@ng-icons/heroicons": "^32.1.0",
     "@tailwindcss/postcss": "^4.1.13",
+    "chart.js": "^4.5.0",
     "jwt-decode": "^4.0.0",
+    "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.23.0",
