--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "chart.js": "^4.5.0",
     "jwt-decode": "^4.0.0",
+    "maplibre-gl": "^5.8.0",
     "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
