configuração de desenvolvimento remoto e ajustes de dependências
- angular.json: permite host 0.0.0.0, porta 4200 e adiciona app.portfoliostudio.cfd em allowedHosts
- package-lock.json: atualiza versão para 0.3.0 e marca dependências como peer
- DriverService.kt: limpeza de linhas em branco

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -52,6 +52,15 @@
         },
         "serve": {
           "builder": "@angular/build:dev-server",
+          "options": {
+            "host": "0.0.0.0",
+            "port": 4200,
+            "allowedHosts": [
+              "localhost",
+              "127.0.0.1",
+              "app.portfoliostudio.cfd"
+            ]
+          },
           "configurations": {
             "production": {
               "buildTarget": "frontend:build:production"
@@ -75,9 +84,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ]
+            "styles": ["src/styles.css"]
           }
         }
       }
