chore(frontend): atualizar versão para 0.4 e ajustes de build
Atualizado angular.json:

Aumentados budgets de build para 3MB.

Limpeza da lista allowedHosts para padrão.

Atualizado login.html:

Versão exibida alterada de 0.3 para 0.4.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -31,13 +31,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "3MB",
+                  "maximumError": "3MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "3MB",
+                  "maximumError": "3MB"
                 }
               ],
               "outputHashing": "all"
@@ -55,11 +55,7 @@
           "options": {
             "host": "0.0.0.0",
             "port": 4200,
-            "allowedHosts": [
-              "localhost",
-              "127.0.0.1",
-              "app.portfoliostudio.cfd"
-            ]
+            "allowedHosts": []
           },
           "configurations": {
             "production": {
